objects/Sales_Plan_KPI__c/Sales_Plan_KPI__c.object-meta.xml
<CustomObject>
    <description>Stores all the KPI (aka quota) records for a Sales Plan</description>
    <label>Sales Plan KPI</label>
    <nameField>
        <displayFormat>SPK-{000000}</displayFormat>
        <label>Sales Plan KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plan KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>