objects/Sales_Plan_KPI__c/fields/Companion_Sales_Plan_KPI__c.field-meta.xml
<CustomField>
    <fullName>Companion_Sales_Plan_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The companion KPI to this one. If this record is of type Quota, then this link will be of type OTV</inlineHelpText>
    <label>Companion Sales Plan KPI</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Plan__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Plan__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.KPI_Label__c</field>
            <operation>equals</operation>
            <valueField>$Source.KPI_Label__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Plan_KPI__c</referenceTo>
    <relationshipLabel>Sales Plan KPIs</relationshipLabel>
    <relationshipName>Sales_Plan_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>