objects/Sales_Plan_KPI__c/fields/KPI_Label__c.field-meta.xml
<CustomField>
    <fullName>KPI_Label__c</fullName>
    <description>The label for this KPI</description>
    <inlineHelpText>Please select a label for this KPI</inlineHelpText>
    <label>KPI Label</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Plan_KPI_KPI_Label</valueSetName>
    </valueSet>
</CustomField>