objects/Sales_Plan_KPI__c/fields/KPI_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Name__c</fullName>
    <description>This field is automatically populated by Salesforce by the Sales Plan KPI - Before Insert - Fast Field Updates flow</description>
    <inlineHelpText>The name is automatically populated by Salesforce based on the combination of Fiscal Year, KPI Label and KPI Type</inlineHelpText>
    <label>KPI Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>