objects/Sales_Plan_KPI__c/fields/Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Name__c</fullName>
    <description>A concatenation of a number of fields to be used in matching rules. This is a system field only; it will not be placed on the page layout</description>
    <label>Match Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>