objects/Sales_Plan_KPI__c/fields/Rate_Preview__c.field-meta.xml
<CustomField>
    <fullName>Rate_Preview__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rate Preview</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>