objects/Sales_Plan_KPI__c/fields/Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sales_Plan__c</fullName>
    <description>The Sales Plan to which this KPI record is attached</description>
    <inlineHelpText>Please select the Sales Plan record to which this KPI is related</inlineHelpText>
    <label>Sales Plan</label>
    <referenceTo>Sales_Plan__c</referenceTo>
    <relationshipLabel>Sales Plan KPIs</relationshipLabel>
    <relationshipName>Sales_Plan_KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>