objects/Sales_Plan_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Plan__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>KPI_Label__c</columns>
    <columns>KPI_Type__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KPI_Type__c</field>
        <operation>equals</operation>
        <value>OTV</value>
    </filters>
    <label>All</label>
</ListView>