objects/Sales_Plan_KPI__c/listViews/ALL_Sales_Plan_KPI.listView-meta.xml
<ListView>
    <fullName>ALL_Sales_Plan_KPI</fullName>
    <columns>NAME</columns>
    <columns>Sales_Plan__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>KPI_Type__c</columns>
    <columns>KPI_Label__c</columns>
    <columns>Rate_Preview__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KPI_Label__c</field>
        <operation>equals</operation>
        <value>ARR</value>
    </filters>
    <label>ALL Sales Plan KPI</label>
</ListView>